--- a/package.json
+++ b/package.json
@@ -1,9 +1,25 @@
 {
-  "name": "app",
+  "name": "ruby-apollo-file-uploader",
   "private": true,
-  "dependencies": {
-    "@rails/ujs": "^6.0.0",
-    "@rails/activestorage": "^6.0.0"
+  "version": "1.0.0",
+  "scripts": {
+    "start": "webpack-dev-server --mode development --output '[name].js'"
   },
-  "version": "0.1.0"
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.6",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-manifest-plugin": "^2.2.0"
+  }
 }
