--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack-dev-server --mode development --output '[name].js'"
+    "start": "webpack-dev-server --mode development --output '[name].js'",
+    "lint": "npx eslint src/**/*.{js,jsx,ts,tsx}",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "react": "^17.0.1",
@@ -26,6 +28,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
     "prettier": "^2.2.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
@@ -33,5 +37,16 @@
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run precommit"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
