--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "noImplicitReturns": true,
     "lib": ["es2017", "dom"],
     "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+    },
   },
   "include": ["src/*"],
   "exclude": ["node_modules"]
